# learn_language_with_texts

./: .env.template  .gitignore  README.md  dev_prompt.md  main.py  pyproject.toml  start_server.sh
data/916859020/: bilingual_text.json
feature_prompts/: audio_feature.md  audit.md  lemma_prompt.md
src/: authentication.py  config.py  logging_config.py  main copy.py  main.py  users.json
src/api/: data_classes.py  utils.py
src/auth/: .users_template.json  __init__.py  usage_tracker.py
src/data_classes/: bilingual_text.py  lemma_index.py
src/deploy/: download_nlp.py
src/pdf_gen/: pdf_generator.py
src/prompts/: make_text_bilingual.md  prompt_reader.py
src/static/: app.js  bilingual_result.html  index.html  login.html  result_render.js  style.css
src/tests/: test_llm.py  test_load_stats.py  test_nlp.py  test_pdf_gen.py  test_prompt_read.py  test_ssml.py  test_tts.py  test_usage_tracker.py  test_utils.py
src/tests/test_data/inputs/: turkish_text.txt
src/tests/test_data/outputs/: SSML.xml  biling_text.json  billing_text.json
src/text_processing/: llm_communicator.py  nlp.py  usage_tracker.py  utils.py
src/tts/: ssml_generator.py  ssml_template.j2  ssml_template.jinja  tts_generator.py
