[project]
name = "learn-language-with-texts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langdetect>=1.0.9",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
    "stanza>=1.10.1",
]
