[project]
name = "learn-language-with-texts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-speech>=1.44.0",
    "fastapi[standard]>=0.115.13",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.1.5",
    "langdetect>=1.0.9",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
    "stanza>=1.10.1",
    "stopwordsiso>=0.6.1",
    "uvicorn>=0.34.3",
]
